release/1.12/VERSION.md
# 1.12

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.12```   |
| Release Time   | ```2017-06-02T13:50:27+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.12```   |
| sha1   | ```a21e1ded1a24ea1548dd8db0cf30b6acb02655a9```   |
| size   | ```143136```   |
| total size  | ```129843781```  |
| url       | ```https://piston-meta.mojang.com/v1/packages/a21e1ded1a24ea1548dd8db0cf30b6acb02655a9/1.12.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```909823f9c467f9934687f136bc95a667a0d19d7f```   |
| size   | ```10177098```   |
| url       | ```https://piston-data.mojang.com/v1/objects/909823f9c467f9934687f136bc95a667a0d19d7f/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```8494e844e911ea0d63878f64da9dcc21f53a3463```   |
| size   | ```30202458```   |
| url       | ```https://piston-data.mojang.com/v1/objects/8494e844e911ea0d63878f64da9dcc21f53a3463/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |